--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -15,8 +15,8 @@
                 <thead>
                 <tr>
                     <th style="width:50%">Product</th>
-                    <th style="width:10%">Price</th>
-                    <th style="width:8%">Quantity</th>
+                    <th style="width:10%" class="text-center">Price</th>
+                    <th style="width:8%" class="text-center">Quantity</th>
                     <th style="width:22%" class="text-center">Subtotal</th>
                     <th style="width:10%"></th>
                 </tr>
