--- a/user/templates/checkout.html
+++ b/user/templates/checkout.html
@@ -284,7 +284,7 @@
                     <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><strong>Order placed on {% now 'm/j/Y' %}</strong></h3>
+                                <h3 class="panel-title"><strong>Order will be placed on {% now 'm/j/Y' %} once the payment is approved.</strong></h3>
                             </div>
                             <div class="panel-body">
                                 <div class="table-responsive">
@@ -294,7 +294,6 @@
                                             <td><strong>Product</strong></td>
                                             <td class="text-center"><strong>Price</strong></td>
                                             <td class="text-center"><strong>Quantity</strong></td>
-                                            <td class="text-center"><strong>Order Status</strong></td>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -315,8 +314,6 @@
                                                 </td>
                                                 <td class="text-center">{{ item.product.discounted_price }}</td>
                                                 <td class="text-center">{{ item.quantity }}</td>
-                                                <td class="text-center">Processing</td>
-
                                             </tr>
                                         {% endfor %}
                                         </tbody>
