--- a/user/templates/order-placed.html
+++ b/user/templates/order-placed.html
@@ -1,7 +1,11 @@
 {% extends 'base_kompany.html' %}
 {% load static%}
 <link href="{% static 'ShoppersPoint/css/style.css' %}" rel="stylesheet">
-{% block body %}<h1 class="text-center">Order placed successfully!!</h1>
+{% block body %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'ShoppersPoint/css/base-page-css.css' %}">
+{% endblock %}
+<h1 class="text-center">Order placed successfully!!</h1>
 <a href="{% url 'home' %}" class="text-center">
     <button class="btn btn-group-lg">Continue Shopping</button>
 </a>
