--- a/user/templates/base.html
+++ b/user/templates/base.html
@@ -7,7 +7,7 @@
     {% load static %}
     {% block style_base %}
 
-        <link rel="stylesheet" href="{% static 'user/css/style1.css' %}">
+        <link rel="stylesheet" href="{% static '../static/css/style1.css' %}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
         <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
