Removed redundant attributes from mobiles and laptop tables and show display size of mobile

--- a/ShoppersPoint/templates/product-page.html
+++ b/ShoppersPoint/templates/product-page.html
@@ -32,7 +32,7 @@
                         <tbody>
                         <tr>
                             <td>Product Name</td>
-                            <td>{{ product_list.product_name }}</td>
+                            <td>{{ product_list.product_id.product_name }}</td>
                         </tr>
                         <tr>
                             <td>What is in th Box?</td>
@@ -75,7 +75,7 @@
                         <tbody>
                         <tr>
                             <td>Product Name</td>
-                            <td>{{ product_list.product_name }}</td>
+                            <td>{{ product_list.product_id.product_name }}</td>
                         </tr>
                         <tr>
                             <td>Model Name</td>
@@ -87,7 +87,7 @@
                         </tr>
                         <tr>
                             <td>Display</td>
-                            <td>{{ product_list.display }}</td>
+                            <td>{{ product_list.display_size }}</td>
                         </tr>
                         <tr>
                             <td>Resolution</td>
