--- a/ShoppersPoint/templates/category-page.html
+++ b/ShoppersPoint/templates/category-page.html
@@ -27,10 +27,10 @@
                             </div>
                         </div>
                         <div class="product-info">
-                            <h4><a href="/home/product/{{ product.product_id_id }}">{{ product.product_name }}</a></h4>
+                            <h4><a href="/home/product/{{ product.product_id_id }}">{{ product.product_id.product_name }}</a></h4>
                             <div class="info-product-price">
-                                <span class="item_price">${{ product.discounted_price }}</span>
-                                <del>${{ product.price }}</del>
+                                <span class="item_price">${{ product.product_id.discounted_price }}</span>
+                                <del>${{ product.product_id.price }}</del>
                             </div>
                         </div>
                     </div>
