Removed SSD from laptop, fixed css, renamed images

--- a/ShoppersPoint/static/ShoppersPoint/css/base-page-css.css
+++ b/ShoppersPoint/static/ShoppersPoint/css/base-page-css.css
@@ -166,6 +166,12 @@ nav a:hover{
     width: 300px !important;
 }
 
+/*Product Image Responsiveness*/
+.mobile {
+    height: 300px !important;
+    width: 300px !important;
+}
+
 
 .product-info {
     text-align: center;
