--- a/ShoppersPoint/templates/category-page.html
+++ b/ShoppersPoint/templates/category-page.html
@@ -15,7 +15,7 @@
                 <div class="col-md-3">
                     <div class="product-item">
                         <div class="thumbnail">
-                            <img src="{{ product.image_src }}" alt=""
+                            <img src="{{ product.product_id.image_src }}" alt=""
                                  class="pro-image-front {{ product.product_category }}">
                             <img src="{{ product.image_src }}" alt=""
                                  class="pro-image-back {{ product.product_category }}">
