--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -27,7 +27,7 @@
                         <td data-th="Product">
                             <div class="row">
                                 <div class="col-sm-2 hidden-xs"><img
-                                        src="/static/ShoppersPoint/ShoppersPoint/images/{{ item.product.category_type_id }}s/{{ item.product_id }}.jpg"
+                                        src="/static/ShoppersPoint/ShoppersPoint/images/{{ item.product.category_type_id }}s/{{ item.product.image_src }}.jpg"
                                         alt="..."
                                         class="img-responsive"/></div>
                                 <div class="col-sm-10">
