--- a/user/templates/checkout.html
+++ b/user/templates/checkout.html
@@ -300,7 +300,7 @@
                                                     <div class="media">
                                                         <a class="thumbnail pull-left" href="#"> <img
                                                                 class="media-object"
-                                                                src="/static/ShoppersPoint/ShoppersPoint/images/{{ item.product.category_type_id }}s/{{ item.product_id }}.jpg"
+                                                                src="/static/ShoppersPoint/ShoppersPoint/images/{{ item.product.category_type_id }}s/{{ item.product.image_src }}.jpg"
                                                                 style="width: 72px; height: 72px;">
                                                         </a>
                                                         <div class="media-body">
