--- a/ShoppersPoint/templates/category-page.html
+++ b/ShoppersPoint/templates/category-page.html
@@ -1,4 +1,4 @@
-{% extends 'base_kompany.html' %}
+{% extends 'base_ShoppersPoint.html' %}
     {% block title %}ShoppersPoint{% endblock %}
     {% load static %}
     {% block css %}
