--- a/ShoppersPoint/templates/home_page.html
+++ b/ShoppersPoint/templates/home_page.html
@@ -1,4 +1,4 @@
-{% extends 'base_kompany.html' %}
+{% extends 'base_ShoppersPoint.html' %}
 {% load static %}
 {% block css %}
     <link rel="stylesheet" href="{% static 'ShoppersPoint/css/base-page-css.css' %}">
