--- a/ShoppersPoint/templates/product-page.html
+++ b/ShoppersPoint/templates/product-page.html
@@ -1,4 +1,4 @@
-{% extends 'base_kompany.html' %}
+{% extends 'base_ShoppersPoint.html' %}
 {% load static %}
 {% block css %}
     <link href="http://ubislider.com/css/ubislider.min.css?v=1.0.0.1" rel="stylesheet" type="text/css">
