--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -1,9 +1,8 @@
-{% extends 'base_kompany.html' %}
+{% extends 'base_ShoppersPoint.html' %}
 {% load static %}
 {% load user_extras %}
 {% block css %}
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'ShoppersPoint/css/base-page-css.css' %}">
 {% endblock %}
 
