--- a/ShoppersPoint/templates/home_page.html
+++ b/ShoppersPoint/templates/home_page.html
@@ -12,7 +12,7 @@
                 <div class="col-md-12 slider">
                     <div class="col-md-2">
                         <div class="content category-name">
-                            <h2>Deals on {{ category.category_name }}</h2>
+                            <h2>Deals on {{ category.category_info }}</h2>
                             <a href="{% url 'category' category.category_type 1 %}">
                                 <button class="btn btn-default view">View All</button>
                             </a>
