--- a/user/templates/cart.html
+++ b/user/templates/cart.html
@@ -4,6 +4,7 @@
 {% block css %}
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'ShoppersPoint/css/base-page-css.css' %}">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
